<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
				 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>io.zeitwert</groupId>
	<artifactId>fm-parent</artifactId>
	<name>FM (Facilities Management) Parent</name>
	<description>Parent POM for FM Application Server</description>
	<packaging>pom</packaging>
	<version>1.0.21-SNAPSHOT</version>

	<modules>
		<module>fm-dddrive</module>
		<module>fm-domain</module>
		<module>fm-ui</module>
		<module>fm-server</module>
	</modules>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.8</version>
		<relativePath/>
	</parent>

	<properties>
		<!-- Build -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>21</java.version>
		<maven.compiler.release>21</maven.compiler.release>
		<!-- Kotlin -->
		<kotlin.version>2.2.0</kotlin.version>
		<kotlin.compiler.incremental>false</kotlin.compiler.incremental>
		<!-- Maven plugins -->
		<maven.compiler.version>3.13.0</maven.compiler.version>
		<maven.model.version>3.9.9</maven.model.version>
		<maven.release.version>3.0.1</maven.release.version>
		<maven.resources.version>3.3.1</maven.resources.version>
		<maven.clean.version>3.3.2</maven.clean.version>
		<maven.dependency.version>3.7.0</maven.dependency.version>
		<maven.versions.version>2.17.0</maven.versions.version>
		<!-- Dependencies -->
		<crnk.version>3.4.20210509072026</crnk.version>
		<flyway.version>10.21.0</flyway.version>
		<!-- jOOQ version is managed by Spring Boot (${jooq.version}) -->
		<jjwt.version>0.12.5</jjwt.version>
		<lombok.version>1.18.34</lombok.version>
		<aspose-words.version>22.12</aspose-words.version>
		<google-maps.version>2.1.2</google-maps.version>
		<jackson.version>2.20.1</jackson.version>
		<jackson-kotlin.version>3.0.3</jackson-kotlin.version>
		<!-- Frontend -->
		<frontend-maven-plugin.version>1.12.1</frontend-maven-plugin.version>
		<node.version>v18.12.1</node.version>
		<yarn.version>v1.22.19</yarn.version>
		<!-- jOOQ generation (disabled by default) -->
		<skip.jooq.generation>true</skip.jooq.generation>
	</properties>

	<repositories>
		<repository>
			<id>AsposeJavaAPI</id>
			<name>Aspose Java API</name>
			<url>https://repository.aspose.com/repo/</url>
		</repository>
	</repositories>

	<scm>
		<developerConnection>scm:git:https://gitlab.com/zeit-wert/zeit-wert/zeitwert.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<dependencyManagement>
		<dependencies>

			<!-- FM Internal modules -->
			<dependency>
				<groupId>io.zeitwert</groupId>
				<artifactId>fm-dddrive</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>io.zeitwert</groupId>
				<artifactId>fm-domain</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>io.zeitwert</groupId>
				<artifactId>fm-ui</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- Kotlin -->
			<dependency>
				<groupId>org.jetbrains.kotlin</groupId>
				<artifactId>kotlin-stdlib</artifactId>
				<version>${kotlin.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jetbrains.kotlin</groupId>
				<artifactId>kotlin-reflect</artifactId>
				<version>${kotlin.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jetbrains.kotlin</groupId>
				<artifactId>kotlin-test</artifactId>
				<version>${kotlin.version}</version>
				<scope>test</scope>
			</dependency>

			<!-- Jackson -->
			<dependency>
				<groupId>com.fasterxml.jackson.datatype</groupId>
				<artifactId>jackson-datatype-jsr310</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>tools.jackson.module</groupId>
				<artifactId>jackson-module-kotlin</artifactId>
				<version>${jackson-kotlin.version}</version>
			</dependency>

			<!-- Crnk JSON:API -->
			<dependency>
				<groupId>io.crnk</groupId>
				<artifactId>crnk-core</artifactId>
				<version>${crnk.version}</version>
			</dependency>
			<dependency>
				<groupId>io.crnk</groupId>
				<artifactId>crnk-setup-spring</artifactId>
				<version>${crnk.version}</version>
				<exclusions>
					<exclusion>
						<groupId>io.crnk</groupId>
						<artifactId>crnk-setup-spring-boot2</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<!-- Database -->
			<dependency>
				<groupId>org.flywaydb</groupId>
				<artifactId>flyway-core</artifactId>
				<version>${flyway.version}</version>
			</dependency>
			<dependency>
				<groupId>org.flywaydb</groupId>
				<artifactId>flyway-database-postgresql</artifactId>
				<version>${flyway.version}</version>
			</dependency>

			<!-- JWT -->
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-api</artifactId>
				<version>${jjwt.version}</version>
			</dependency>
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-impl</artifactId>
				<version>${jjwt.version}</version>
			</dependency>
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-jackson</artifactId>
				<version>${jjwt.version}</version>
			</dependency>

			<!-- Aspose -->
			<dependency>
				<groupId>com.aspose</groupId>
				<artifactId>aspose-words</artifactId>
				<version>${aspose-words.version}</version>
				<classifier>jdk17</classifier>
			</dependency>

			<!-- Google Maps -->
			<dependency>
				<groupId>com.google.maps</groupId>
				<artifactId>google-maps-services</artifactId>
				<version>${google-maps.version}</version>
			</dependency>

			<!-- Lombok -->
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
				<scope>provided</scope>
			</dependency>

			<!-- Monitoring -->
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-model</artifactId>
				<version>${maven.model.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<!--
				Mixed Java/Kotlin compilation order:
				1. Kotlin compiles first (compile phase) - can see Java classes
				2. Java compiles second (compile phase) - can see Kotlin classes, Lombok processes annotations

				IMPORTANT: kotlin-maven-plugin must be declared BEFORE maven-compiler-plugin
				so that in the 'compile' phase, Kotlin runs first, then Java.
			-->
				<!-- Kotlin compilation (runs first in compile phase) -->
				<plugin>
					<groupId>org.jetbrains.kotlin</groupId>
					<artifactId>kotlin-maven-plugin</artifactId>
					<version>${kotlin.version}</version>
					<executions>
						<!-- Disable default executions (avoid running twice) -->
						<execution>
							<id>default-compile</id>
							<phase>none</phase>
						</execution>
						<execution>
							<id>default-testCompile</id>
							<phase>none</phase>
						</execution>
						<execution>
							<id>compile</id>
							<phase>compile</phase>
							<goals>
								<goal>compile</goal>
							</goals>
							<configuration>
								<sourceDirs>
									<sourceDir>${project.basedir}/src/main/java</sourceDir>
								</sourceDirs>
							</configuration>
						</execution>
						<execution>
							<id>test-compile</id>
							<phase>test-compile</phase>
							<goals>
								<goal>test-compile</goal>
							</goals>
							<configuration>
								<sourceDirs>
									<sourceDir>${project.basedir}/src/test/java</sourceDir>
								</sourceDirs>
							</configuration>
						</execution>
					</executions>
					<configuration>
						<jvmTarget>21</jvmTarget>
					</configuration>
				</plugin>
				<!-- Java compilation (runs second in compile phase, after Kotlin) -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven.compiler.version}</version>
					<executions>
						<!-- Disable default executions -->
						<execution>
							<id>default-compile</id>
							<phase>none</phase>
						</execution>
						<execution>
							<id>default-testCompile</id>
							<phase>none</phase>
						</execution>
						<!-- Compile Java after Kotlin (for Java that depends on Kotlin) -->
						<execution>
							<id>java-compile</id>
							<phase>compile</phase>
							<goals>
								<goal>compile</goal>
							</goals>
						</execution>
						<!-- Test compilation -->
						<execution>
							<id>java-test-compile</id>
							<phase>test-compile</phase>
							<goals>
								<goal>testCompile</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<annotationProcessorPaths>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${lombok.version}</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>${maven.release.version}</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>${maven.versions.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${maven.resources.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>${maven.clean.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>${maven.dependency.version}</version>
				</plugin>
				<plugin>
					<groupId>org.flywaydb</groupId>
					<artifactId>flyway-maven-plugin</artifactId>
					<configuration>
						<skip>true</skip>
						<url>jdbc:postgresql://localhost:9999/zeitwert</url>
						<user>zeitwert</user>
						<password>zeitwert</password>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>org.flywaydb</groupId>
							<artifactId>flyway-database-postgresql</artifactId>
							<version>${flyway.version}</version>
						</dependency>
						<dependency>
							<groupId>org.postgresql</groupId>
							<artifactId>postgresql</artifactId>
							<version>${postgresql.version}</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.jooq</groupId>
					<artifactId>jooq-codegen-maven</artifactId>
					<version>${jooq.version}</version>
					<configuration>
						<jdbc>
							<driver>org.postgresql.Driver</driver>
							<url>jdbc:postgresql://localhost:9999/zeitwert</url>
							<user>zeitwert</user>
							<password>zeitwert</password>
						</jdbc>
					</configuration>
				</plugin>
				<plugin>
					<groupId>com.github.eirslett</groupId>
					<artifactId>frontend-maven-plugin</artifactId>
					<version>${frontend-maven-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>
